@@ -1,6 +1,6 @@
 = gpsplot(1)
 :author: Gary E. Miller
-:date: 11 February 2021
+:date: 12 February 2021
 :email: <gem@rellim.com.>
 :keywords: gps, gpsplot, scatterplot. strip chart
 :manmanual: GPSD Documentation
@@ -30,11 +30,11 @@ users screen. Plot types include scatterplots and stripcharts.
 
 Plotting requires the Python Matplotlib module, and its many
 dependencies be installed on the display host.  If the display
-host is not the *gpsd* host, then Matplot is not required to be on the
+host is not the *gpsd* host, then Matplotlib is not required to be on the
 *gpsd* host.
 
 *gpslot* does not require root privileges, but can be run as root.
-Running under sudo may cause some loss of functioanality. It can be run
+Running under sudo may cause some loss of functionality. It can be run
 concurrently with other tools connecting to the local *gpsd* without
 causing problems.
 
@@ -46,6 +46,8 @@ causing problems.
   Set debug level to LVL.
 *--device DEVICE*::
   The DEVICE on the *gpsd* to connect to. Defaults to all.
+*--exit*::
+  Exit after --count, --file, or --file completes.
 *--fields FIELDS*::
   The code for the fields to plot. FIELDS is one of: llh
   (lat/lon/altHAE) or llm (lat/lon/altMSL).
@@ -53,18 +55,20 @@ causing problems.
   Read JSON from FILE instead of from *gpsd*..
 *--host HOST*::
   Connect to the *gpsd* on HOST (server). Defaults to localhost.
+*--image IMAGE.EXT*::
+  Save plot as IMAGE.EXT. EXT determines image type (.jpg, .png, etc.).
+  Which EXT are supported is installation dependent.
+*-n COUNT*, *--count COUNT*::
+  Stop after COUNT plot messages. 0 to disable. Default 0',
 *--plottype PLOTTYPE*::
   The type of plot to make. PLOTTYPE is one of 'scatterplot'
   or 'stripchart'.
-*-n COUNT*, *--count COUNT*::
-  Exit after COUNT plot messages.
 *-p PORT*, *--port PORT*::
   Use PORT to connect to *gpsd*. Defaults to 2947.
 *-V*, *--version*::
   Print the program version and exit.
 *-x SECONDS*, *--seconds SECONDS*::
-  Wait for SECONDS seconds before exiting. Set to zero to disable.
-  Default 0.
+ Stop after SECONDS. 0 to disable. Default 0',
 
 == EXAMPLES
 
@@ -82,12 +86,13 @@ Ellipsoid (altHAE). Stop after 60 fixes:
 gpsplot --count 60 --plottype stripchart
 ----
 
-Generate a scatterplot locally of Latitude, Longitude and altMSL from a
-remote *gpsd* instannce at host "example.com" and the remote device
-"/dev/ttyS0". Stop after 60 fixes:
+Generate a scatterplot locally of Latitude, Longitude and altMSL from
+a remote *gpsd* instance at host "example.com" and the remote device
+"/dev/ttyS0". Collect 60 fixes, Stop, save the plot as "save.jpg, and
+exit:
 
 ----
-gpsplot --count 60 --fields llm example.com::/dev/ttyS0
+gpsplot --count 60 --exit --fields llm --image save.jpg example.com::/dev/ttyS0
 ----
 
 == RETURN VALUES
